--- a/main.scss
+++ b/main.scss
@@ -381,4 +381,467 @@ main{
             }
         }
     }
+    .section3{
+        background-image: url(./img/disinfection-sanitization-spraying-900x450.png);
+        height: 600px;
+        width: 1200px;
+        background-repeat: no-repeat;
+        margin: 0 auto;
+        margin-bottom: 120px;
+        border-radius: 20px;
+        .container{
+            .section3-container{
+                width: 558px;
+                margin-left: 640px;
+                margin-right: 100px;
+                .hashorat{
+                    margin-top: 60px;
+                    
+                    h3{
+                    font-weight: 700;
+                    font-style: Bold;
+                    font-size: 40px;
+                    line-height: 48px;
+                    letter-spacing: 0%;
+                    color: white;
+                    margin-bottom: 20px;
+                }
+                p{
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 24px;
+                    letter-spacing: 0%;
+                    color: white;
+                    width: 322px;
+                    margin-bottom: 136px;
+                }
+                
+                body {
+                        margin: 0;
+                        min-height: 100vh;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        background: #1a1a1a;
+                        font-family: "Inter", sans-serif;
+                        }
+
+                        .btn {
+                        position: relative;
+                        padding: 1rem 2rem;
+                        font-size: 1rem;
+                        font-weight: 600;
+                        color: white;
+                        background: none;
+                        border: 2px solid #646cff;
+                        border-radius: 20px;
+                        cursor: pointer;
+                        overflow: hidden;
+                        transition: all 0.3s ease;
+                        }
+
+                        .liquid {
+                        background: linear-gradient(#646cff 0 0) no-repeat calc(200% - var(--p, 0%))
+                            100% / 200% var(--p, 0.2em);
+                        transition: 0.3s var(--t, 0s),
+                            background-position 0.3s calc(0.3s - var(--t, 0s));
+                        }
+
+                        .liquid:hover {
+                        --p: 100%;
+                        --t: 0.3s;
+                        color: #fff;
+                        }
+                }
+                 
+            }
+        }
+    }
+    .section4{
+        .container{
+            .section-container{
+                h4{
+                    font-weight: 700;
+                    font-style: Bold;
+                    font-size: 52px;
+                    line-height: 64px;
+                    letter-spacing: 0%;
+                    text-transform: capitalize;
+                    color: #020C31;
+                    margin-bottom: 16px;
+                }
+                p{
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 24px;
+                    letter-spacing: 0%;
+                    color: #666666;
+                    width: 371px;
+                    margin-bottom: 48px;
+                }
+            }
+            .section4-cards{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    gap: 16px;
+                    margin-bottom: 120px;
+                    .card{
+                        width: 443px;
+                        height: 500px;
+                        border: 1px solid #F3F6F6;
+                        background: #F3F6F6;
+                        border-radius: 12px;
+                        h2{
+                            padding-top: 48px;
+                            padding-left: 32px;
+                            font-weight: 700;
+                            font-style: Bold;
+                            font-size: 32px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            color: #020C31;
+                            margin-bottom: 20px;
+                        }
+                        .nazariy{
+                            padding-left: 32px;
+                            font-weight: 500;
+                            font-style: Medium;
+                            font-size: 16px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            text-transform: capitalize;
+                            color: #056AC7;
+                            margin-bottom: 8px;
+                        }
+                        .dars{
+                            font-weight: 500;
+                            font-style: Medium;
+                            font-size: 16px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            color: #056AC7;
+                            padding-left: 32px;
+                        }
+                        img{
+                           padding-left: 270px;
+                           padding-top: 200px;
+                        }
+                    }
+
+                    .card1{
+                        width: 443px;
+                        height: 500px;
+                        border: 1px solid #F3F6F6;
+                        background: #F3F6F6;
+                        border-radius: 12px;
+                        h2{
+                            padding-top: 48px;
+                            padding-left: 32px;
+                            font-weight: 700;
+                            font-style: Bold;
+                            font-size: 32px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            color: #020C31;
+                            margin-bottom: 60px;
+                        }
+                        .nazariy{
+                            padding-left: 32px;
+                            font-weight: 500;
+                            font-style: Medium;
+                            font-size: 16px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            text-transform: capitalize;
+                            color: #03ADE3;
+                            margin-bottom: 8px;
+                        }
+                        .dars{
+                            font-weight: 500;
+                            font-style: Medium;
+                            font-size: 16px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            color: #00A9B3;
+                            padding-left: 32px;
+                        }
+                        img{
+                           padding-left: 270px;
+                           padding-top: 200px;
+                        }
+                    }
+
+                    .card2{
+                        width: 443px;
+                        height: 500px;
+                        border: 1px solid #F3F6F6;
+                        background: #F3F6F6;
+                        border-radius: 12px;
+                        h2{
+                            padding-top: 48px;
+                            padding-left: 32px;
+                            font-weight: 700;
+                            font-style: Bold;
+                            font-size: 32px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            color: #020C31;
+                            margin-bottom: 60px;
+                        }
+                        .nazariy{
+                            padding-left: 32px;
+                            font-weight: 500;
+                            font-style: Medium;
+                            font-size: 16px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            text-transform: capitalize;
+                            color: #009AA3;
+                            margin-bottom: 8px;
+                        }
+                        .dars{
+                            font-weight: 500;
+                            font-style: Medium;
+                            font-size: 16px;
+                            line-height: 100%;
+                            letter-spacing: 0%;
+                            color:#00A9B3;
+                            padding-left: 32px;
+                        }
+                        img{
+                           padding-left: 270px;
+                           padding-top: 200px;
+                        }
+                    }
+                }
+        }
+    }
+    .section5{
+        background-image: url(./img/Rectangle\ 5.png);
+        width: 1200px;
+        height: 574px;
+        background-repeat: no-repeat;
+         margin: 0 auto;
+        margin-bottom: 120px;
+        border-radius: 20px;
+
+        .container{
+            .section5-container{
+                display: flex;
+                gap: 100px;
+               .section5-bizda{
+                width: 642px;
+                margin-right: 32px;
+               img{
+               margin-top: 52px;
+               margin-bottom: 18px;
+               }
+               h5{
+                font-weight: 700;
+                font-style: Bold;
+                font-size: 30px;
+                line-height: 48px;
+                letter-spacing: 0%;
+                color: #FAFAFA;
+                margin-bottom: 136px;
+               }
+
+               body {
+                    margin: 0;
+                    min-height: 100vh;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background: #0a0a0a;
+                    font-family: "Inter", sans-serif;
+                    perspective: 1000px;
+                    overflow-x: hidden;
+                    }
+
+                    .btn {
+                    position: relative;
+                    padding: 1.5rem 3rem;
+                    font-size: 1.1rem;
+                    font-weight: 600;
+                    color: #fff;
+                    background: none;
+                    border: none;
+                    cursor: pointer;
+                    overflow: hidden;
+                    transition: all 0.4s ease;
+                    min-width: 200px;
+                    z-index: 1;
+                    }
+
+                    .neon-pulse {
+                    background:#3375FF;
+                    border-radius: 62px;
+                    border: 2px solid #0ff;
+                    box-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
+                    overflow: visible;
+                    }
+
+                    .neon-pulse::before,
+                    .neon-pulse::after {
+                    content: "";
+                    position: absolute;
+                    inset: -4px;
+                    border: 2px solid #0ff;
+                    border-radius: inherit;
+                    animation: pulseOut 2s ease-out infinite;
+                    opacity: 0;
+                    }
+
+                    .neon-pulse::after {
+                    animation-delay: 1s;
+                    }
+
+                    @keyframes pulseOut {
+                    0% {
+                        transform: scale(1);
+                        opacity: 1;
+                    }
+                    100% {
+                        transform: scale(1.5);
+                        opacity: 0;
+                    }
+                    }
+
+               }
+            }
+        }
+    }
+    .section6{
+        .container{
+            .section6-container{
+                border-top: 2px solid #CCCCCC;
+                display: flex;
+                align-items: center;
+               gap: 200px;
+               margin-bottom: 110px;
+                
+               .faq{
+                margin-top: -300px;
+                h2{
+                    font-weight: 700;
+                    font-style: Bold;
+                    font-size: 48px;
+                    line-height: 48px;
+                    letter-spacing: 0%;
+
+                }
+               }
+
+               .chiziq{
+                
+                 .section6-kursda{
+                    display: flex;
+                    gap: 430px;
+                margin-top: 40px;
+                padding-bottom: 38px;
+                border-bottom: 1px solid #CCCCCC;
+                
+                h3{
+                    width: 348px;
+                    font-weight: 500;
+                    font-style: Medium;
+                    font-size: 24px;
+                    line-height: 32px;
+                    letter-spacing: 0%;
+                    color: #676D83;
+                }
+                img{
+                    width: 52px;
+                    height: 52px;
+                    background: #F2F2F2;
+                    border-radius: 50%;
+                    padding-top: 17px;
+                    padding-left: 11px;
+                    padding-bottom: 12px;
+                    padding-right: 12px;
+                }
+               }
+                .section6-kursda3{
+                    display: flex;
+                    gap: 430px;
+                margin-top: 40px;
+                padding-bottom: 38px;
+                border-bottom: 1px solid #CCCCCC;
+                
+                h3{
+                    width: 348px;
+                    font-weight: 500;
+                    font-style: Medium;
+                    font-size: 24px;
+                    line-height: 32px;
+                    letter-spacing: 0%;
+                    color: #676D83;
+                }
+                img{
+                    width: 52px;
+                    height: 52px;
+                    background: #F2F2F2;
+                    border-radius: 50%;
+                    padding-top: 17px;
+                    padding-left: 11px;
+                    padding-bottom: 12px;
+                    padding-right: 12px;
+                }
+               }
+
+                .section6-kursda2{
+                display: flex;
+                gap: 180px;
+                margin-top: 40px;
+                padding-bottom: 38px;
+                width: 870px;
+                border-bottom: 1px solid #CCCCCC;
+                .mazgi{
+
+                    h3{
+                    width: 348px;
+                    font-weight: 500;
+                    font-style: Medium;
+                    font-size: 24px;
+                    line-height: 32px;
+                    letter-spacing: 0%;
+                    color: #676D83;
+                    margin-bottom: 25px;
+                }
+                p{
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 32px;
+                    letter-spacing: 0%;
+                    color: #676D83;
+                    width: 600px;
+                }
+                }
+                
+                 
+                .strelka{
+
+              img{
+                    width: 52px;
+                    height: 52px;
+                    margin-top: 70px;
+                }
+                }
+               
+
+               }
+               }
+               
+            }
+        }
+    }
+
+    .section7{
+        .container{
+            .section7-container{
+                
+            }
+        }
+    }
 }
