--- a/main.scss
+++ b/main.scss
@@ -838,10 +838,112 @@ main{
     }
 
     .section7{
+        background-image: url(./img/Rectangle\ 111001851.png);
+        height: 448px;
+        width: 1250px;
+        background-repeat: no-repeat;
+        margin: 0 auto;
+        border-radius: 20px;
+        margin-bottom: 30px;
+
         .container{
             .section7-container{
+                display: flex;
+            justify-content: space-between;
+              
                 
+                form{
+                    width: 406px;
+                    height: 384px;
+                    border-radius: 8px;
+                    background: white;
+                    border: 1px solid white;
+                    h3{
+                        font-weight: 700;
+                        font-style: Bold;
+                        font-size: 32px;
+                        line-height: 40px;
+                        letter-spacing: 0%;
+                        color: #242825;
+                        padding-top: 28px;
+                        padding-left: 24px;
+                        margin-bottom: 36px;
+                    }
+                    .ism{
+                        width: 360px;
+                        height: 44px;
+                        background: #F2F2F2;
+                        border-radius: 8px;
+                        border: none;
+                        padding-left: 20px;
+                        padding-top: 10px;
+                        margin-left: 24px;
+                        margin-bottom: 16px;
+                    }
+                    .number{
+                         width: 360px;
+                        height: 44px;
+                        background: #F2F2F2;
+                        border-radius: 8px;
+                        border: none;
+                        padding-left: 20px;
+                        padding-top: 8px;
+                        margin-left: 24px;
+                        margin-bottom: 16px;
+                    }
+                    label{
+                        display: flex;
+                        gap: 8px;
+                        margin-left: 28px;
+                        margin-bottom: 16px;
+                        font-weight: 400;
+                            font-style: Regular;
+                            font-size: 14px;
+                            line-height: 20px;
+                            letter-spacing: 0%;
+                       
+                    }
+
+                    button{
+                        margin-left: 24px;
+                        background: #242825;
+                        width: 360px;
+                        height: 44px;
+                        color: white;
+                        text-align: center;
+                        border-radius: 8px;
+
+                    }
+
+                }
+
+                .section7-ishonch{
+                    display: flex;
+                    margin-left: 80px;
+                    h4{
+                        font-weight: 500;
+                        font-style: Medium;
+                        font-size: 16px;
+                        line-height: 24px;
+                        letter-spacing: 0%;
+                        color: white;
+                        margin-top: 60px;
+                        width: 308px;
+                        padding-left: 40px;
+                    }
+                    img{
+                        width: 390px;
+                        height: 400px;
+                       
+                    }
+                }
             }
         }
+    }
+}
+
+footer{
+    .container{
+        
     }
 }
